# server-manager

./: .gitignore  README.md
backend/: .env.example  .gitignore  Cargo.toml  Jenkinsfile  blah  readme.md
backend/shipped_plugins/plugins/: agent.json  docker_port.json  docker_socket.json  opnsense.json  pihole.json  proxmox.json  sleep.json  synology.json  tasmota.json  upnp.json  wol.json
backend/shipped_plugins/templates/agent/: data_os-information.html
backend/shipped_plugins/templates/docker/: data_container-list.html
backend/shipped_plugins/templates/opnsense/: data_firmwarerunning.html  data_firmwarestatus.html  data_getinterfaces.html
backend/shipped_plugins/templates/pihole/: data_summary.html
backend/shipped_plugins/templates/proxmox/: data_lxc-list.html  data_node-status.html  data_qemu-list.html  data_version.html
backend/shipped_plugins/templates/tasmota/: data_energy_today.html  data_energy_total.html  data_powerstate.html  data_status.html
backend/shipped_plugins/templates/upnp/: data_deviceinfo.html
backend/src/: appdata.rs  config.rs  config_types.rs  conversion.rs  crypt.rs  discover.rs  features.rs  handlebars_helper_functions.rs  handlebars_helpers.rs  http_functions.rs  init.rs  inmemory.rs  main.rs  migrations.rs  persistence.rs  plugin_types.rs  plugins.rs  routes.rs  scheduler.rs  server_types.rs  servers.rs  status.rs  systeminfo.rs  types.rs  upnp.rs
backend/src/commands/: http.rs  kafka.rs  mod.rs  ping.rs  socket.rs  wol.rs
backend/src/commands/common/: mod.rs  replace.rs
backend/src/common/: clientkey.rs  crypt.rs  http_functions.rs  kafka_functions.rs  mail.rs  mod.rs  onetimekey.rs  script_languages.rs  token.rs
backend/src/datastore/: config.rs  inmemory.rs  mod.rs  notifications.rs  persistence.rs  plugins.rs  servers.rs  timeseries.rs  timeseries_persistence.rs  users.rs
backend/src/datastore/model/: migration.rs  mod.rs
backend/src/event_handling/: mod.rs  object_action.rs  types.rs
backend/src/init/: background_processes.rs  files.rs  mod.rs  scheduling.rs
backend/src/init/template_engine/: functions.rs  mod.rs
backend/src/migrations/: mod.rs
backend/src/models/: error.rs  mod.rs
backend/src/models/config/: dns_server.rs  mod.rs
backend/src/models/input/: mod.rs
backend/src/models/plugin/: action.rs  common.rs  data.rs  detection.rs  mod.rs  monitoring.rs  notification.rs  sub_action.rs
backend/src/models/request/: common.rs  mod.rs  plugin.rs  server.rs  user.rs
backend/src/models/response/: data_result.rs  host_information.rs  mod.rs  status.rs  system_information.rs
backend/src/models/server/: mod.rs
backend/src/models/timeseries/: mod.rs
backend/src/models/token/: mod.rs  tokeninfo.rs  usertoken.rs
backend/src/models/users/: mod.rs
backend/src/other_functions/: mod.rs  statuscheck.rs  systeminfo.rs  upnp.rs
backend/src/plugin_execution/: mod.rs
backend/src/plugin_execution/actions/: conditions.rs  mod.rs
backend/src/plugin_execution/data/: conversion.rs  mod.rs
backend/src/plugin_execution/discovery/: mod.rs
backend/src/plugin_execution/monitoring/: mod.rs  response_parser.rs
backend/src/plugin_execution/notifications/: mod.rs
backend/src/webserver/: appdata.rs  mod.rs  routes.rs
docker/: Dockerfile  Howto.txt  Jenkinsfile  docker-compose.yml  entrypoint.sh
frontend/: .eslintrc.json  .gitignore  Jenkinsfile  angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
frontend/src/: index.html  main.ts  proxy.conf.json  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/actions/: server-status.action.types.ts
frontend/src/app/auth/: auth.guard.ts  error.interceptor.ts  register.guard.ts  token.interceptor.ts
frontend/src/app/errors/: error.interceptor.ts
frontend/src/app/login/: login.component.html  login.component.scss  login.component.ts
frontend/src/app/main/: main.component.html  main.component.ts
frontend/src/app/reducers/: index.ts  server-status.reducers.ts
frontend/src/app/register/: register.component.html  register.component.scss  register.component.ts
frontend/src/app/services/: common.ts
frontend/src/app/services/auth/: types.ts  (+1 more)
frontend/src/app/shared/: error-enum-name.pipe.ts  grid-col-directive.ts  subscriptionHandler.ts  utils.ts
frontend/src/app/state/: global.actions.ts  global.effects.ts  index.ts
frontend/src/app/systeminformation/: systeminformation.component.html  systeminformation.component.scss  systeminformation.component.ts
frontend/src/app/test/: data.ts
frontend/src/types/: ChartData.ts  ServerAddress.ts
kafka-agent/: .env.example  Cargo.toml  Jenkinsfile  topics.txt
kafka-agent/src/: common.rs  errors.rs  heartbeat.rs  kafka_connectivity.rs  main.rs  non_system_commands.rs  system_commands.rs  systeminfo.rs
(+196 files in other folders)
