[package]
name = "server-manager-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.17"
rlua = "0.19.4"
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
assert-json-diff = "2.0.2"
config = "0.13.1"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite", "chrono"]}
http = "0.2.9"
ipnet = "2.7.2"
actix-web = "4"
actix-files = "0.6.2"
tokio = { version = "1.21.2", features = ["full"] }
dnsclient = { version = "0.1.17"}
futures = "0.3.28"
rand = "0.8.5"
surge-ping = "0.8.0"
lazy_static = "1.4.0"
reqwest = "0.11.16"
regex = "1.8.1"
base64 = "0.21.0"
wake-on-lan = "0.2.0"
mac_address = "1.1.4"
handlebars = { version="4.3.6", features=["dir_source", "script_helper"]}
thiserror = "1.0.40"
magic-crypt = "3.1.12"
hex = "0.4.3"
time = "0.3.20"
upnp-client = "0.1.9" 
