[package]
name = "server-manager-rust"
version = "0.1.0"
edition = "2021"

[build]
target = "x86_64-pc-windows-msvc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.17"
log-derive = "0.4.1"
rlua = "0.19.4"
rhai = "1.14.0"
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
assert-json-diff = "2.0.2"
config = "0.13.1"
chrono = "0.4.26"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono"
] }
http = "0.2.9"
ipnet = "2.7.2"
actix-web = "4"
actix-files = "0.6.2"
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web-httpauth = "0.8.0"
actix-web-lab = "0.19.1"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"]}
tokio-cron-scheduler = "0.9.4"
dnsclient = { version = "0.1.17" }
futures = "0.3.28"
rand = "0.8.5"
surge-ping = "0.8.0"
lazy_static = "1.4.0"
async_once = "0.2.6"
reqwest = "0.11.16"
regex = "1.8.1"
base64 = "0.21.0"
wake-on-lan = "0.2.0"
mac_address = "1.1.4"
handlebars = { version = "4.3.6", features = ["dir_source", "script_helper"] }
thiserror = "1.0.40"
magic-crypt = "3.1.12"
hex = "0.4.3"
ssdp-client = "1.0.0"
quick-xml = { version = "0.29.0", features = ["serialize"] }
sys-info = "0.9.1"
memory-stats = { version = "1.0.0", features = ["always_use_statm"] }
async-trait = "0.1.68"
lettre = "0.10.4"
bcrypt = "0.14.0"
aes-gcm = "0.10.1"
pbkdf2 = "0.12.1"
sha2 = "0.10.6"
aes = "0.8.2"
local-ip-address = "0.5.3"
questdb-rs = "2.1.3"
jsonpath-rust = "0.3.0"
async-recursion = "1.0.4"
kafka = "0.9.0"
uuid = { version = "1.3.4", features = ["v4", "fast-rng"] }
futures-util = "0.3.28"