[package]
name = "kafka-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
dotenv = "0.15.0"
log = "0.4.19"
kafka = "0.9.0"
sysinfo  = "0.29.2"
serde = { version="1.0.164", features = ["derive"]}
serde_json = "1.0.97"
clokwerk = "0.4.0"
chrono = { version="0.4.17", features = ["serde"]}